tests/snapshots/s6_peers_view__view_oversaturated_bin.snap
---
source: tests/s6_peers_view.rs
expression: view
---
PeersView {
    bins: [
        BinStripRow {
            bin: 0,
            population: 17,
            connected: 12,
            status: Healthy,
            is_relevant: true,
        },
        BinStripRow {
            bin: 1,
            population: 17,
            connected: 12,
            status: Healthy,
            is_relevant: true,
        },
        BinStripRow {
            bin: 2,
            population: 17,
            connected: 12,
            status: Healthy,
            is_relevant: true,
        },
        BinStripRow {
            bin: 3,
            population: 17,
            connected: 12,
            status: Healthy,
            is_relevant: true,
        },
        BinStripRow {
            bin: 4,
            population: 30,
            connected: 25,
            status: Over,
            is_relevant: true,
        },
        BinStripRow {
            bin: 5,
            population: 17,
            connected: 12,
            status: Healthy,
            is_relevant: true,
        },
        BinStripRow {
            bin: 6,
            population: 17,
            connected: 12,
            status: Healthy,
            is_relevant: true,
        },
        BinStripRow {
            bin: 7,
            population: 17,
            connected: 12,
            status: Healthy,
            is_relevant: true,
        },
        BinStripRow {
            bin: 8,
            population: 17,
            connected: 12,
            status: Healthy,
            is_relevant: true,
        },
        BinStripRow {
            bin: 9,
            population: 0,
            connected: 0,
            status: Starving,
            is_relevant: true,
        },
        BinStripRow {
            bin: 10,
            population: 0,
            connected: 0,
            status: Starving,
            is_relevant: true,
        },
        BinStripRow {
            bin: 11,
            population: 0,
            connected: 0,
            status: Starving,
            is_relevant: true,
        },
        BinStripRow {
            bin: 12,
            population: 0,
            connected: 0,
            status: Starving,
            is_relevant: true,
        },
        BinStripRow {
            bin: 13,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 14,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 15,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 16,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 17,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 18,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 19,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 20,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 21,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 22,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 23,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 24,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 25,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 26,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 27,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 28,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 29,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 30,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 31,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
    ],
    peers: [],
    depth: 8,
    population: 166,
    connected: 121,
    reachability: "Public",
    network_availability: "Available",
    light_connected: 0,
    saturation: SaturationSummary {
        starving: 4,
        over: 1,
        relevant: 13,
        worst_bin: Some(
            9,
        ),
        worst_connected: 0,
    },
}
