tests/snapshots/s6_peers_view__view_peer_rows_sort_stably.snap
---
source: tests/s6_peers_view.rs
expression: view
---
PeersView {
    bins: [
        BinStripRow {
            bin: 0,
            population: 0,
            connected: 0,
            status: Starving,
            is_relevant: true,
        },
        BinStripRow {
            bin: 1,
            population: 0,
            connected: 0,
            status: Starving,
            is_relevant: true,
        },
        BinStripRow {
            bin: 2,
            population: 2,
            connected: 2,
            status: Starving,
            is_relevant: true,
        },
        BinStripRow {
            bin: 3,
            population: 0,
            connected: 0,
            status: Starving,
            is_relevant: true,
        },
        BinStripRow {
            bin: 4,
            population: 0,
            connected: 0,
            status: Starving,
            is_relevant: true,
        },
        BinStripRow {
            bin: 5,
            population: 2,
            connected: 2,
            status: Starving,
            is_relevant: true,
        },
        BinStripRow {
            bin: 6,
            population: 0,
            connected: 0,
            status: Starving,
            is_relevant: true,
        },
        BinStripRow {
            bin: 7,
            population: 0,
            connected: 0,
            status: Starving,
            is_relevant: true,
        },
        BinStripRow {
            bin: 8,
            population: 0,
            connected: 0,
            status: Starving,
            is_relevant: true,
        },
        BinStripRow {
            bin: 9,
            population: 0,
            connected: 0,
            status: Starving,
            is_relevant: true,
        },
        BinStripRow {
            bin: 10,
            population: 0,
            connected: 0,
            status: Starving,
            is_relevant: true,
        },
        BinStripRow {
            bin: 11,
            population: 0,
            connected: 0,
            status: Starving,
            is_relevant: true,
        },
        BinStripRow {
            bin: 12,
            population: 0,
            connected: 0,
            status: Starving,
            is_relevant: true,
        },
        BinStripRow {
            bin: 13,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 14,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 15,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 16,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 17,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 18,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 19,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 20,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 21,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 22,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 23,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 24,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 25,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 26,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 27,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 28,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 29,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 30,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 31,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
    ],
    peers: [
        PeerRow {
            bin: 2,
            peer_short: "101010…1010",
            peer_full: "1010101010101010101010101010101010101010101010101010101010101010",
            direction: "out",
            latency: "1ms",
            healthy: true,
            reachability: "Public",
        },
        PeerRow {
            bin: 2,
            peer_short: "ffffff…ffff",
            peer_full: "ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff",
            direction: "out",
            latency: "1ms",
            healthy: true,
            reachability: "Public",
        },
        PeerRow {
            bin: 5,
            peer_short: "707070…7070",
            peer_full: "7070707070707070707070707070707070707070707070707070707070707070",
            direction: "in",
            latency: "1ms",
            healthy: true,
            reachability: "Public",
        },
        PeerRow {
            bin: 5,
            peer_short: "808080…8080",
            peer_full: "8080808080808080808080808080808080808080808080808080808080808080",
            direction: "in",
            latency: "1ms",
            healthy: true,
            reachability: "Public",
        },
    ],
    depth: 8,
    population: 4,
    connected: 4,
    reachability: "Public",
    network_availability: "Available",
    light_connected: 0,
}
