tests/snapshots/s6_peers_view__view_peer_table_with_metrics_and_without.snap
---
source: tests/s6_peers_view.rs
expression: view
---
PeersView {
    bins: [
        BinStripRow {
            bin: 0,
            population: 10,
            connected: 9,
            status: Healthy,
            is_relevant: true,
        },
        BinStripRow {
            bin: 1,
            population: 10,
            connected: 9,
            status: Healthy,
            is_relevant: true,
        },
        BinStripRow {
            bin: 2,
            population: 10,
            connected: 9,
            status: Healthy,
            is_relevant: true,
        },
        BinStripRow {
            bin: 3,
            population: 10,
            connected: 9,
            status: Healthy,
            is_relevant: true,
        },
        BinStripRow {
            bin: 4,
            population: 4,
            connected: 3,
            status: Starving,
            is_relevant: true,
        },
        BinStripRow {
            bin: 5,
            population: 10,
            connected: 9,
            status: Healthy,
            is_relevant: true,
        },
        BinStripRow {
            bin: 6,
            population: 10,
            connected: 9,
            status: Healthy,
            is_relevant: true,
        },
        BinStripRow {
            bin: 7,
            population: 10,
            connected: 9,
            status: Healthy,
            is_relevant: true,
        },
        BinStripRow {
            bin: 8,
            population: 10,
            connected: 9,
            status: Healthy,
            is_relevant: true,
        },
        BinStripRow {
            bin: 9,
            population: 0,
            connected: 0,
            status: Starving,
            is_relevant: true,
        },
        BinStripRow {
            bin: 10,
            population: 0,
            connected: 0,
            status: Starving,
            is_relevant: true,
        },
        BinStripRow {
            bin: 11,
            population: 0,
            connected: 0,
            status: Starving,
            is_relevant: true,
        },
        BinStripRow {
            bin: 12,
            population: 0,
            connected: 0,
            status: Starving,
            is_relevant: true,
        },
        BinStripRow {
            bin: 13,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 14,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 15,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 16,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 17,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 18,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 19,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 20,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 21,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 22,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 23,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 24,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 25,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 26,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 27,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 28,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 29,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 30,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
        BinStripRow {
            bin: 31,
            population: 0,
            connected: 0,
            status: Empty,
            is_relevant: false,
        },
    ],
    peers: [
        PeerRow {
            bin: 4,
            peer_short: "aaaaaa…aaaa",
            peer_full: "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
            direction: "out",
            latency: "8ms",
            healthy: true,
            reachability: "Public",
        },
        PeerRow {
            bin: 4,
            peer_short: "bbbbbb…bbbb",
            peer_full: "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
            direction: "in",
            latency: "240ms",
            healthy: false,
            reachability: "Private",
        },
        PeerRow {
            bin: 4,
            peer_short: "cccccc…cccc",
            peer_full: "cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc",
            direction: "?",
            latency: "—",
            healthy: false,
            reachability: "",
        },
    ],
    depth: 8,
    population: 84,
    connected: 75,
    reachability: "Public",
    network_availability: "Available",
    light_connected: 0,
}
